--- a/pom.xml
+++ b/pom.xml
@@ -302,6 +302,16 @@
           <skip>true</skip>
         </configuration>
       </plugin>
+
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>tomcat-maven-plugin</artifactId>
+        <configuration>
+          <url>http://115.159.31.63:8080/manager/text</url>
+          <server>RiceflowerBlog</server>
+          <path>/RiceflowerBlog</path>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
