--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -6,7 +6,8 @@
 
 #MySQL
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/foblog?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&allowMultiQueries=true
+#jdbc.url=jdbc:mysql://localhost:3306/foblog?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&allowMultiQueries=true
+jdbc.url=jdbc:mysql://115.159.31.63:3306/RiceflowerBlog_db?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&allowMultiQueries=true
 jdbc.username=root
 jdbc.password=abc
 
