提交到新分支上

--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -7,9 +7,7 @@
 #MySQL
 jdbc.driverClassName=com.mysql.jdbc.Driver
 #jdbc.url=jdbc:mysql://localhost:3306/foblog?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&allowMultiQueries=true
-jdbc.url=jdbc:mysql://115.159.31.63:3306/RiceflowerBlog_db?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&allowMultiQueries=true
-jdbc.username=root
-jdbc.password=abc
-
-
-
+#jdbc.url=jdbc:mysql://115.159.31.63:3306/RiceflowerBlog_db?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&allowMultiQueries=true
+jdbc.url=jdbc:mysql://w.rdc.sae.sina.com.cn:3306/app_guxiangfly2?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&allowMultiQueries=true
+jdbc.username=jo0x1x2nx0
+jdbc.password=z0zyilixlh2wi5j24xwjzyhk21zj24i354w03j5i
