--- a/pom.xml
+++ b/pom.xml
@@ -307,9 +307,9 @@
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>tomcat-maven-plugin</artifactId>
         <configuration>
-          <url>http://115.159.31.63:8080/manager/text</url>
-          <server>RiceflowerBlog</server>
-          <path>/RiceflowerBlog</path>
+  <!--        <url>http://115.159.31.63:8080/manager/text</url>-->
+          <url>http://101.132.177.62:8081/manager/html</url>
+          <path>/</path>
         </configuration>
       </plugin>
     </plugins>
