--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -5,4 +5,4 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
     username: root
     password: root
-    url: jdbc:mysql://115.159.31.63:3306/riceflowerblog_db?haracterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://115.159.31.63:3306/riceflowerblog_db?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&allowMultiQueries=true&useSSL=false
